--- a/gardener/gardener/Views/MainPage.xaml
+++ b/gardener/gardener/Views/MainPage.xaml
@@ -2,7 +2,8 @@
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:views="clr-namespace:gardener.Views"
-            x:Class="gardener.Views.MainPage">
+            x:Class="gardener.Views.MainPage"
+            Title="Главная страница">
 
     <MasterDetailPage.Master>
         <views:MenuPage />
