--- a/gardener/gardener/Views/Listview/Formappsale.xaml
+++ b/gardener/gardener/Views/Listview/Formappsale.xaml
@@ -3,8 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.Rent.Formappsale">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Форма заявки продажи" VerticalOptions="Center"/>
+        <StackLayout HeightRequest="50">
+            <Label Text="Форма заявки продажи" FontSize="Medium" HorizontalOptions="Center" VerticalOptions="Center"/>
+            <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                <Entry x:Name="number" FontSize="Large" TextColor="#9e4819" 
+               Placeholder="Номер" PlaceholderColor="#7a7a7a"/>
+                <Entry x:Name="place" FontSize="Large" TextColor="#9e4819" 
+               Placeholder="Место" PlaceholderColor="#7a7a7a" />
+                <Entry x:Name="name" FontSize="Large" TextColor="#9e4819"
+               Placeholder="Имя" PlaceholderColor="#7a7a7a" />
+                <Entry x:Name="tel" FontSize="Large" TextColor="#9e4819" 
+               Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
+                <Entry x:Name="cost" FontSize="Large" TextColor="#9e4819" 
+               Placeholder="Стоимость" PlaceholderColor="#7a7a7a" />
+            </StackLayout>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
