--- a/gardener/gardener/Views/Listview/Formappsale.xaml
+++ b/gardener/gardener/Views/Listview/Formappsale.xaml
@@ -17,6 +17,10 @@
                Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
                 <local:MyEntry x:Name="cost" FontSize="Large" TextColor="#9e4819" 
                Placeholder="Стоимость" PlaceholderColor="#7a7a7a" />
+                <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
+                    HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
+                    BorderRadius="15" WidthRequest="250"  BackgroundColor="Transparent">
+                </Button>
             </StackLayout>
         </StackLayout>
     </ContentPage.Content>
