--- a/gardener/gardener/Views/MenuPage.xaml
+++ b/gardener/gardener/Views/MenuPage.xaml
@@ -3,18 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.MenuPage"
              Title="Menu">
-    <StackLayout VerticalOptions="FillAndExpand">
-        <ListView x:Name="ListViewMenu"
-                    HasUnevenRows="True">
-            <ListView.ItemTemplate>
-                <DataTemplate>
-                    <ViewCell>
-                        <Grid Padding="10">
-                            <Label Text="{Binding Title}" FontSize="20"/>
-                        </Grid>
-                    </ViewCell>
-                </DataTemplate>
-            </ListView.ItemTemplate>
-        </ListView>
+    <StackLayout>
+        <StackLayout VerticalOptions="FillAndExpand" HeightRequest="230" BackgroundColor="#fcf7f1">
+            <StackLayout HorizontalOptions="Center" VerticalOptions="CenterAndExpand">
+                <Image Source="pict_1.png" Margin="10"/>
+                <Label Text="САДОВОД" TextColor="#9e4819" FontSize="20" />
+            </StackLayout>
+        </StackLayout>
+        <StackLayout VerticalOptions="FillAndExpand" BackgroundColor="#f7ecdd" Padding="0, 70, 0, 0">
+            <ListView x:Name="ListViewMenu"
+                        HasUnevenRows="True">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <StackLayout HeightRequest="60" Padding="20, 0, 0, 0">
+                                <Label Text="{Binding Title}" VerticalOptions="CenterAndExpand" FontSize="20" TextColor="#9e4819" />
+                            </StackLayout>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </StackLayout>
     </StackLayout>
 </ContentPage>
