--- a/gardener/gardener/Views/Listview/Formapp.xaml
+++ b/gardener/gardener/Views/Listview/Formapp.xaml
@@ -3,8 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.Rent.Formapp">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Форма заявки аренды" HorizontalOptions="Center"/>
-        </StackLayout>
+        <ScrollView>
+            <StackLayout>
+                <Label Text="Форма заявки аренды" HorizontalOptions="Center"/>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
