--- a/gardener/gardener/Views/Listview/Formapp.xaml
+++ b/gardener/gardener/Views/Listview/Formapp.xaml
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="gardener.Views.Listview.Formapp">
+             x:Class="gardener.Views.ListView.FormApp">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
-                <Label Text="Форма заявки аренды" HorizontalOptions="Center"/>
+                <Label Text="Форма заявки аренды" HorizontalOptions="Center" />
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
