--- a/gardener/gardener/Views/MainPage.xaml
+++ b/gardener/gardener/Views/MainPage.xaml
@@ -1,9 +1,10 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <MasterDetailPage xmlns="http://xamarin.com/schemas/2014/forms"
-            xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-            xmlns:views="clr-namespace:gardener.Views"
-            x:Class="gardener.Views.MainPage"
-            Title="Главная страница">
+                  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                  xmlns:views="clr-namespace:gardener.Views"
+                  x:Class="gardener.Views.MainPage"
+                  Title="Главная страница">
 
     <MasterDetailPage.Master>
         <views:MenuPage />
@@ -13,11 +14,11 @@
         <NavigationPage>
             <NavigationPage.Icon>
                 <OnPlatform x:TypeArguments="FileImageSource">
-                    <On Platform="iOS" Value="tab_feed.png"/>
+                    <On Platform="iOS" Value="tab_feed.png" />
                 </OnPlatform>
             </NavigationPage.Icon>
             <x:Arguments>
-                <views:RentsallePage />
+                <views:RentSalePage />
             </x:Arguments>
         </NavigationPage>
     </MasterDetailPage.Detail>
