--- a/gardener/gardener/Views/SalePage.xaml
+++ b/gardener/gardener/Views/SalePage.xaml
@@ -1,12 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="gardener.Views.SallePage">
+             x:Class="gardener.Views.SalePage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Страница продажи находиться в разработке. Для связи почта: info@itmit-studio.ru"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+                   VerticalOptions="CenterAndExpand"
+                   HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
