--- a/src/gardener/Views/ListView/Formapp.xaml
+++ b/src/gardener/Views/ListView/Formapp.xaml
@@ -2,11 +2,22 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:blocksViews="clr-namespace:gardener.Views.BlocksViews"
              x:Class="gardener.Views.ListView.FormApp">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
-                <Label Text="Форма заявки аренды" HorizontalOptions="Center" />
+                <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                    <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding IsBusy}"/>
+                    <Label Text="Форма заявки аренды" HorizontalOptions="Center" />
+                    <ListView ItemsSource="{Binding PlaceCollection}" RowHeight="100" SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <blocksViews:PlaceViewCell/>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </Grid>
             </StackLayout>
         </ScrollView>
     </ContentPage.Content>
