Добавлены недостающие блоки, дорабатываю страницу со списком мест

--- a/src/gardener/App.xaml
+++ b/src/gardener/App.xaml
@@ -2,6 +2,7 @@
 
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:converters="clr-namespace:gardener.Converters"
              x:Class="gardener.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -11,6 +12,7 @@
                 <Setter Property="BarBackgroundColor" Value="{StaticResource NavigationGardener}" />
                 <Setter Property="BarTextColor" Value="#9e4819" />
             </Style>
+            <converters:BoolActiveToColorConverter x:Key="ActiveToColorConverter" ActiveColor="Default" NoActiveColor="DarkGray"/>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
