--- a/src/gardener/Views/BlocksViews/BlockViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/BlockViewCell.xaml
@@ -6,7 +6,7 @@
                                  x:Class="gardener.Views.BlocksViews.BlockViewCell"
                                  SelectedBackgroundColor="WhiteSmoke">
     <ViewCell.View>
-        <StackLayout Orientation="Horizontal" StyleClass="item-block">
+        <StackLayout Orientation="Horizontal" StyleClass="item-block" BackgroundColor="{Binding IsActive, Converter={StaticResource ActiveToColorConverter}}">
             <StackLayout WidthRequest="100" Margin="10,0,10,0">
                 <StackLayout VerticalOptions="CenterAndExpand" BackgroundColor="#f68b1f" Padding="1">
                     <Image Source="{Binding ImagePath}" Aspect="AspectFill" VerticalOptions="Center" />
