--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -3,26 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:gardener="clr-namespace:gardener"
              x:Class="gardener.Views.BlocksViews.PlaceViewCell">
-  <ViewCell.View>
-        <ScrollView>
-            <StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Место" FontSize="Medium" TextColor="#9e4819" VerticalOptions="Center" HorizontalOptions="Start" />
-                    <Label Text="{Binding PlaceNumber}" FontSize="Medium" TextColor="#9e4819" VerticalOptions="Center" HorizontalOptions="End" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Этаж" FontSize="Medium" TextColor="#9e4819" />
-                    <Label Text="{Binding Floor}" FontSize="Medium" TextColor="#9e4819" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Ряд" FontSize="Medium" TextColor="#9e4819" />
-                    <Label Text="{Binding Row}" FontSize="Medium" TextColor="#9e4819" />
-                </StackLayout>
-                <StackLayout Orientation="Horizontal">
-                    <Label Text="Цена" FontSize="Medium" TextColor="#9e4819" />
-                    <Label Text="{Binding Price}" FontSize="Medium" TextColor="#9e4819" />
-                </StackLayout>
+    <ViewCell.View>
+        <StackLayout VerticalOptions="Fill">
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Место" FontSize="Medium" TextColor="#9e4819"/>
+                <Label Text="{Binding PlaceNumber}" FontSize="Medium" TextColor="#9e4819" />
             </StackLayout>
-        </ScrollView>
-  </ViewCell.View>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Этаж" FontSize="Medium" TextColor="#9e4819" />
+                <Label Text="{Binding Floor}" FontSize="Medium" TextColor="#9e4819" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Ряд" FontSize="Medium" TextColor="#9e4819" />
+                <Label Text="{Binding Row}" FontSize="Medium" TextColor="#9e4819" />
+            </StackLayout>
+            <StackLayout Orientation="Horizontal">
+                <Label Text="Цена" FontSize="Medium" TextColor="#9e4819" />
+                <Label Text="{Binding Price}" FontSize="Medium" TextColor="#9e4819" />
+            </StackLayout>
+        </StackLayout>
+    </ViewCell.View>
 </gardener:ExtendedViewCell>
