--- a/src/gardener/Views/ListView/FormAppSale.xaml
+++ b/src/gardener/Views/ListView/FormAppSale.xaml
@@ -3,21 +3,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:gardener.Models"
+             xmlns:gardener="clr-namespace:gardener"
              x:Class="gardener.Views.ListView.FormAppSale">
     <ContentPage.Content>
         <StackLayout HeightRequest="50">
-            <Label Text="Форма заявки продажи" FontSize="Large" HorizontalOptions="Center" VerticalOptions="Center" />
             <StackLayout Margin="30,10,30,10" WidthRequest="300">
-                <local:MyEntry x:Name="Number" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Номер" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Place" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="PlaceNumber" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Место" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Имя" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Cost" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Стоимость" PlaceholderColor="#7a7a7a" />
                 <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
                         HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
                         CornerRadius="15" WidthRequest="250" BackgroundColor="Transparent" />
