--- a/src/gardener/Views/ListView/Formapp.xaml
+++ b/src/gardener/Views/ListView/Formapp.xaml
@@ -9,11 +9,10 @@
             <StackLayout>
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                     <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding IsBusy}"/>
-                    <Label Text="Форма заявки аренды" HorizontalOptions="Center" />
-                    <ListView ItemsSource="{Binding PlaceCollection}" RowHeight="100" SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
+                    <ListView ItemsSource="{Binding PlaceCollection}" SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
-                                <blocksViews:PlaceViewCell/>
+                                <blocksViews:PlaceViewCell />
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
