--- a/src/gardener/Views/ListView/Formappbuy.xaml
+++ b/src/gardener/Views/ListView/Formappbuy.xaml
@@ -3,21 +3,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.ListView.FormAppBuy"
-             xmlns:local="clr-namespace:gardener.Models">
+             xmlns:local="clr-namespace:gardener.Models"
+             xmlns:gardener="clr-namespace:gardener">
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Форма заявки покупки" HeightRequest="50" FontSize="Large" HorizontalOptions="Center"
-                   VerticalOptions="Center" />
             <StackLayout Margin="30,10,30,10" WidthRequest="300">
-                <local:MyEntry x:Name="Number" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="Number" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Номер" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Place" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="Place" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Место" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Имя" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
-                <local:MyEntry x:Name="Cost" FontSize="Large" TextColor="#9e4819"
+                <gardener:ExtendedEntry x:Name="Cost" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Стоимость" PlaceholderColor="#7a7a7a" />
             </StackLayout>
             <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
