--- a/src/gardener/Views/ListView/Formapp.xaml
+++ b/src/gardener/Views/ListView/Formapp.xaml
@@ -3,13 +3,14 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:blocksViews="clr-namespace:gardener.Views.BlocksViews"
-             x:Class="gardener.Views.ListView.FormApp">
+             x:Class="gardener.Views.ListView.FormApp"
+             Title="{Binding Title}">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
                 <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
                     <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding IsBusy}"/>
-                    <ListView ItemsSource="{Binding PlaceCollection}" SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
+                    <ListView HasUnevenRows="True" ItemsSource="{Binding PlaceCollection}" SelectedItem="{Binding SelectedPlace, Mode=TwoWay}">
                         <ListView.ItemTemplate>
                             <DataTemplate>
                                 <blocksViews:PlaceViewCell />
