--- a/src/gardener/Views/ListView/Formappbuy.xaml
+++ b/src/gardener/Views/ListView/Formappbuy.xaml
@@ -3,21 +3,17 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.ListView.FormAppBuy"
-             xmlns:local="clr-namespace:gardener.Models"
-             xmlns:gardener="clr-namespace:gardener">
+             xmlns:gardener="clr-namespace:gardener"
+             Title="{Binding Title}">
     <ContentPage.Content>
         <StackLayout>
             <StackLayout Margin="30,10,30,10" WidthRequest="300">
-                <gardener:ExtendedEntry x:Name="Number" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Номер" PlaceholderColor="#7a7a7a" />
-                <gardener:ExtendedEntry x:Name="Place" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Место" PlaceholderColor="#7a7a7a" />
+                <gardener:ExtendedEntry x:Name="PlaceNumber" FontSize="Large" TextColor="#9e4819"
+                                        Placeholder="Место" PlaceholderColor="#7a7a7a" />
                 <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Имя" PlaceholderColor="#7a7a7a" />
                 <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
                                Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
-                <gardener:ExtendedEntry x:Name="Cost" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Стоимость" PlaceholderColor="#7a7a7a" />
             </StackLayout>
             <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
                     HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
