--- a/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/PlaceViewCell.xaml
@@ -4,23 +4,14 @@
              xmlns:gardener="clr-namespace:gardener"
              x:Class="gardener.Views.BlocksViews.PlaceViewCell">
     <ViewCell.View>
-        <StackLayout Margin="10, 0">
-            <StackLayout Orientation="Horizontal" >
-                <Label Text="Место:" FontSize="Medium" TextColor="#9e4819"/>
-                <Label Text="{Binding PlaceNumber}" FontSize="Medium" TextColor="#9e4819" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Этаж:" FontSize="Medium" TextColor="#9e4819" />
-                <Label Text="{Binding Floor}" FontSize="Medium" TextColor="#9e4819" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Ряд:" FontSize="Medium" TextColor="#9e4819" />
-                <Label Text="{Binding Row}" FontSize="Medium" TextColor="#9e4819" />
-            </StackLayout>
-            <StackLayout Orientation="Horizontal">
-                <Label Text="Цена:" FontSize="Medium" TextColor="#9e4819" />
-                <Label Text="{Binding Price}" FontSize="Medium" TextColor="#9e4819" />
-            </StackLayout>
+        <StackLayout Margin="10, 10" Orientation="Horizontal">
+
+            <Label Text="Ряд:" FontSize="Large" TextColor="#333333" Margin="10, 0"/>
+            <Label Text="{Binding Row}" FontSize="Large" TextColor="#333333" />
+
+            <Label Text="Место:" FontSize="Large" TextColor="#333333" Margin="10, 0" />
+            <Label Text="{Binding PlaceNumber}" FontSize="Large" TextColor="#333333" />
+
         </StackLayout>
     </ViewCell.View>
 </gardener:ExtendedViewCell>
