--- a/src/gardener/Views/ListView/ListSale.xaml
+++ b/src/gardener/Views/ListView/ListSale.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="gardener.Views.ListView.ListSale"
-             Title="Страница 2">
+             Title="Выбор действия">
     <ContentPage.Content>
         <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
             <Button Text="Аренда помещения" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
