Изменения интерфейса, замена логотипа. Работа над телефонными номерами

--- a/src/gardener/Views/BlocksViews/FloorViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/FloorViewCell.xaml
@@ -6,7 +6,7 @@
              SelectedBackgroundColor="WhiteSmoke">
   <ViewCell.View>
       <StackLayout>
-            <Label Text="{Binding Value}" HorizontalOptions="Center" FontSize="Large" TextColor="#9e4819"/>
+            <Label Text="{Binding Value}" FontSize="Large" TextColor="#9e4819"/>
       </StackLayout>
   </ViewCell.View>
 </gardener:ExtendedViewCell>
