--- a/src/gardener/Views/SelectFloorPage.xaml
+++ b/src/gardener/Views/SelectFloorPage.xaml
@@ -5,7 +5,7 @@
              x:Class="gardener.Views.SelectFloorPage"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
+        <StackLayout>
             <ListView ItemsSource="{Binding Floors}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
