--- a/src/gardener/Views/ListView/FormAppPage.xaml
+++ b/src/gardener/Views/ListView/FormAppPage.xaml
@@ -3,7 +3,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:blocksViews="clr-namespace:gardener.Views.BlocksViews"
-             x:Class="gardener.Views.ListView.FormApp"
+             x:Class="gardener.Views.ListView.FormAppPage"
              Title="{Binding Title}">
     <ContentPage.Content>
         <ScrollView>
