--- a/src/gardener/Views/ListView/ListSalePage.xaml
+++ b/src/gardener/Views/ListView/ListSalePage.xaml
@@ -12,10 +12,10 @@
             <Setter Property="BorderColor" Value="#f68b1f"/>
             <Setter Property="HorizontalOptions" Value="CenterAndExpand"/>
             <Setter Property="VerticalOptions" Value="Center"/>
-            <Setter Property="HeightRequest" Value="60"/>
             <Setter Property="CornerRadius" Value="15"/>
             <Setter Property="WidthRequest" Value="250"/>
             <Setter Property="BackgroundColor" Value="Transparent"/>
+            <Setter Property="Padding" Value="10"/>
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
