Добавлена отправка формы на продожу места.

--- a/src/gardener/Views/ListView/FormAppBuyPage.xaml
+++ b/src/gardener/Views/ListView/FormAppBuyPage.xaml
@@ -6,19 +6,23 @@
              xmlns:gardener="clr-namespace:gardener"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout>
-            <StackLayout Margin="30,10,30,10" WidthRequest="300">
-                <gardener:ExtendedEntry x:Name="PlaceNumber" FontSize="Large" TextColor="#9e4819"
-                                        Placeholder="Место" PlaceholderColor="#7a7a7a" />
-                <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Имя" PlaceholderColor="#7a7a7a" />
-                <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819"
-                               Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
+
+        <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+            <ActivityIndicator Color="#7a7a7a" VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding IsBusy}"/>
+            <StackLayout>
+                <StackLayout Margin="30,10,30,10" WidthRequest="300">
+                    <gardener:ExtendedEntry x:Name="PlaceNumber" FontSize="Large" TextColor="#9e4819"
+                                            Placeholder="Место" PlaceholderColor="#7a7a7a" Text="{Binding PlaceNumber, Mode=TwoWay}"/>
+                    <gardener:ExtendedEntry x:Name="Name" FontSize="Large" TextColor="#9e4819" Text="{Binding Name, Mode=TwoWay}"
+                                   Placeholder="Имя" PlaceholderColor="#7a7a7a" />
+                    <gardener:ExtendedEntry x:Name="PhoneNumber" FontSize="Large" TextColor="#9e4819" Text="{Binding PhoneNumber, Mode=TwoWay}"
+                                   Placeholder="Телефон" PlaceholderColor="#7a7a7a" />
+                </StackLayout>
+                <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
+                        HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
+                        WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15" Command="{Binding SendFormCommand}">
+                </Button>
             </StackLayout>
-            <Button Text="Отправить заявку" FontSize="Medium" BorderWidth="1" Margin="5" BorderColor="#f68b1f"
-                    HorizontalOptions="CenterAndExpand" VerticalOptions="Center" HeightRequest="60"
-                    WidthRequest="250" BackgroundColor="Transparent" CornerRadius="15">
-            </Button>
-        </StackLayout>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
