--- a/src/gardener/Views/BlocksViews/FloorViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/FloorViewCell.xaml
@@ -4,9 +4,8 @@
              xmlns:gardener="clr-namespace:gardener"
              x:Class="gardener.Views.BlocksViews.FloorViewCell"
              SelectedBackgroundColor="WhiteSmoke">
-  <ViewCell.View>
-      <Grid>
-            <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" FontSize="Large" TextColor="#9e4819" HorizontalOptions="Center" VerticalOptions="Center"/>
-      </Grid>
-  </ViewCell.View>
+    <ViewCell.View>
+        <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" FontSize="Large" 
+               TextColor="#9e4819" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
+    </ViewCell.View>
 </gardener:ExtendedViewCell>
