--- a/src/gardener/Views/SelectFloorPage.xaml
+++ b/src/gardener/Views/SelectFloorPage.xaml
@@ -5,7 +5,7 @@
              x:Class="gardener.Views.SelectFloorPage"
              Title="{Binding Title}">
     <ContentPage.Content>
-        <StackLayout>
+        <FlexLayout Direction="Column" AlignItems="Center" JustifyContent="Center" VerticalOptions="CenterAndExpand">
             <ListView ItemsSource="{Binding Floors}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
@@ -13,6 +13,6 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-        </StackLayout>
+        </FlexLayout>
     </ContentPage.Content>
 </ContentPage>
