--- a/src/gardener/Views/BlocksViews/FloorViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/FloorViewCell.xaml
@@ -5,7 +5,9 @@
              x:Class="gardener.Views.BlocksViews.FloorViewCell"
              SelectedBackgroundColor="WhiteSmoke">
     <ViewCell.View>
-        <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" FontSize="Large" 
-               TextColor="#9e4819" HorizontalOptions="Center" VerticalOptions="Center" HorizontalTextAlignment="Center"/>
+        <StackLayout>
+            <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" FontSize="Large" 
+                   TextColor="#9e4819" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
+        </StackLayout>
     </ViewCell.View>
 </gardener:ExtendedViewCell>
