--- a/src/gardener/Views/BlocksViews/FloorViewCell.xaml
+++ b/src/gardener/Views/BlocksViews/FloorViewCell.xaml
@@ -5,9 +5,10 @@
              x:Class="gardener.Views.BlocksViews.FloorViewCell"
              SelectedBackgroundColor="WhiteSmoke">
     <ViewCell.View>
-        <StackLayout>
-            <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" FontSize="Large" 
-                   TextColor="#9e4819" VerticalOptions="CenterAndExpand" HorizontalOptions="Center"/>
-        </StackLayout>
+        <Label Text="{Binding Value, StringFormat=\{0\} Этаж}" 
+               FontSize="30" 
+               TextColor="#9e4819"
+               Margin ="5"
+               VerticalOptions="Center" HorizontalOptions="Center"/>
     </ViewCell.View>
 </gardener:ExtendedViewCell>
