--- a/src/gardener/Views/MapPage.xaml
+++ b/src/gardener/Views/MapPage.xaml
@@ -4,9 +4,18 @@
              x:Class="gardener.Views.MapPage"
              Title="{Binding Title}">
     <ContentPage.Content>
-
-        <AbsoluteLayout HorizontalOptions="FillAndExpand">
-            <ImageButton HorizontalOptions="FillAndExpand" AbsoluteLayout.LayoutBounds="60, 0, 20, 60"  Source="tc6.png" />
-        </AbsoluteLayout>
+        <StackLayout>
+            <AbsoluteLayout VerticalOptions="Center">
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                       AbsoluteLayout.LayoutBounds="0, 0, AutoSize, AutoSize"
+                       Source="tc6.png"
+                       Clicked="ImageButton_Clicked"/>
+                <ImageButton AbsoluteLayout.LayoutFlags="PositionProportional"
+                       AbsoluteLayout.LayoutBounds="0.86, 0.04, AutoSize, AutoSize"
+                       WidthRequest="55"
+                       Source="tc4.png"
+                       Clicked="ImageButton_Clicked_1"/>
+            </AbsoluteLayout>
+        </StackLayout>
     </ContentPage.Content>
 </ContentPage>
